--- a/action.yml
+++ b/action.yml
@@ -1,11 +1,13 @@
-name: 'Your name here'
-description: 'Provide a description here'
-author: 'Your name or organization here'
+name: 'Paul B'
+description: 'Apply AWS State Manager Association state to a pre-existing association'
+author: 'Pluto VR'
 inputs:
-  milliseconds: # change this
+  associationName:
     required: true
-    description: 'input description here'
-    default: 'default value if applicable'
+    description: 'The name of your state manager association'
+  regions:
+    required: true
+     description: 'All regions to apply this association in JSON array form -- example: ["us-west-2", "us-west-1", "us-east-1"]'
 runs:
   using: 'node12'
   main: 'dist/index.js'
