--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -21,5 +21,5 @@ jobs:
           aws-region: us-east-2
       - uses: ./
         with:
-          regions: '["us-west-2","us-east-1","ap-south-1"]'
-          associationName: 'testing'
+          regions: '["us-west-2","us-east-1"]'
+          associationName: 'install_plutosphere_daemon'
