--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -21,5 +21,7 @@ jobs:
           aws-region: us-east-2
       - uses: ./
         with:
-          regions: '["us-west-2","us-east-1"]'
-          associationName: 'install_plutosphere_daemon'
+          regions:
+            - us-west-2
+            - us-east-1
+          associationName: install_plutosphere_daemon
